<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Get us Together</string>

    <string name="LOADING">Loading...</string>

    <string name="about">About</string>

    <string name="about_me">About Me</string>

    <string name="add">Add</string>

    <string name="age">Age</string>

    <string name="age_interest">Age Interest</string>

    <string name="age_interested">Age Interested</string>

    <string name="already_have_an_account">Already have an account?</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="birthday">Birthday</string>

    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>

    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>

    <string name="character_counter_pattern">%1$d / %2$d</string>

    <string name="chat_now">Chat now</string>

    <string name="cheers">Cheers!</string>

    <string name="city">City</string>

    <string name="com_facebook_device_auth_instructions">Visit <b>facebook.com/device</b> and enter the code shown above.</string>

    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>

    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>

    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>

    <string name="com_facebook_like_button_liked">Liked</string>

    <string name="com_facebook_like_button_not_liked">Like</string>

    <string name="com_facebook_loading">Loading…</string>

    <string name="com_facebook_loginview_cancel_action">Cancel</string>

    <string name="com_facebook_loginview_log_in_button">Log in</string>

    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>

    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>

    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>

    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>

    <string name="com_facebook_send_button_text">Send</string>

    <string name="com_facebook_share_button_text">Share</string>

    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>

    <string name="com_facebook_smart_device_instructions_or">- OR -</string>

    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>

    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>

    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>

    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>

    <string name="common_google_play_services_enable_button">Enable</string>

    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>

    <string name="common_google_play_services_enable_title">Enable Google Play services</string>

    <string name="common_google_play_services_install_button">Install</string>

    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>

    <string name="common_google_play_services_install_title">Get Google Play services</string>

    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>

    <string name="common_google_play_services_notification_ticker">Google Play services error</string>

    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>

    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>

    <string name="common_google_play_services_update_button">Update</string>

    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>

    <string name="common_google_play_services_update_title">Update Google Play services</string>

    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>

    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>

    <string name="common_open_on_phone">Open on phone</string>

    <string name="common_signin_button_text">Sign in</string>

    <string name="common_signin_button_text_long">Sign in with Google</string>

    <string name="country">Country</string>

    <string name="create_now">Create now!</string>

    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>

    <string name="crop_image_menu_crop">Crop</string>

    <string name="crop_image_menu_flip">Flip</string>

    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>

    <string name="crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>

    <string name="crop_image_menu_rotate_right">Rotate</string>

    <string name="date">Date</string>

    <string name="default_progressbar">Default Progressbar:</string>

    <!--    <string name="default_web_client_id">874489571618-qpmv657f9vokbg6hqdhda0udsket6vbf.apps.googleusercontent.com</string>-->

    <string name="define_roundedimageview" />

    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_default_title">Here\'s a message!</string>

    <string name="dialog_ok">OK</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="email">Email</string>

    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>

    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>

    <string name="facebook_app_id">701437984032012</string>

    <string name="fb_login_protocol_scheme">fb701437984032012</string>


    <string name="female">Female</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <!--    <string name="firebase_database_url">https://firedating-84a81.firebaseio.com</string>-->

    <string name="flirt">Flirt</string>

    <string name="full_name">Full Name</string>

    <string name="g">G</string>

    <!--    <string name="gcm_defaultSenderId">874489571618</string>-->

    <string name="gender">gender</string>

    <!--    <string name="google_api_key">AIzaSyCxvWYaMF1Zkrz11GHfNpytOeDTfHWSIzg</string>-->

    <!--    <string name="google_app_id">1:874489571618:android:4b14c783b796a532</string>-->

    <!--    <string name="google_crash_reporting_api_key">AIzaSyCxvWYaMF1Zkrz11GHfNpytOeDTfHWSIzg</string>-->

    <!--    <string name="google_storage_bucket">firedating-84a81.appspot.com</string>-->

    <string name="hello">Hello!</string>

    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>

    <string name="just_now">Just Now</string>

    <string name="km">km</string>

    <string name="language">Language</string>

    <string name="library_roundedimageview_author">Vince Mi</string>

    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>

    <string name="library_roundedimageview_isOpenSource">true</string>

    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>

    <string name="library_roundedimageview_libraryName">RoundedImageView</string>

    <string name="library_roundedimageview_libraryVersion">1.3.0</string>

    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>

    <string name="library_roundedimageview_licenseId">apache_2_0</string>

    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>

    <string name="login">Login</string>

    <string name="login_here">Login here!</string>

    <string name="looking_for">Looking for</string>

    <string name="male">Male</string>

    <string name="message">Message</string>

    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>

    <string name="name">name</string>

    <string name="password">Password</string>

    <string name="password_toggle_content_description">Show password</string>

    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>

    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>

    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>

    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>

    <string name="pick_image_intent_chooser_title">Select source</string>

    <!--    <string name="project_id">firedating-84a81</string>-->

    <string name="register">Register</string>

    <string name="relationship">Relationship</string>

    <string name="s1">Save image</string>

    <string name="s2">Allow Ad to store image in Picture gallery?</string>

    <string name="s3">Accept</string>

    <string name="s4">Decline</string>

    <string name="s5">Create calendar event</string>

    <string name="s6">Allow Ad to create a calendar event?</string>

    <string name="s7">Test Ad</string>

    <string name="search_menu_title">Search</string>

    <string name="seeking_for">Seeking for</string>

    <string name="send_message">Send message</string>

    <string name="sexual_orientation">Sexual Orientation</string>

    <string name="start">start</string>

    <string name="state">State</string>

    <string name="status">Status</string>

    <string name="status_bar_notification_info_overflow">999+</string>

    <string name="stranger_let_s_know_you">Stranger! Let\'s know you..</string>

    <string name="welcome_back_dear_visitor">Welcome back dear visitor!</string>

</resources>

