<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:sweet="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/crop_image_menu_rotate_left"
        android:icon="@drawable/crop_image_menu_rotate_left"
        android:title="@string/crop_image_menu_rotate_left"
        android:visible="false"
        sweet:showAsAction="ifRoom" />
    <item
        android:id="@+id/crop_image_menu_rotate_right"
        android:icon="@drawable/crop_image_menu_rotate_right"
        android:title="@string/crop_image_menu_rotate_right"
        sweet:showAsAction="ifRoom" />
    <item
        android:id="@+id/crop_image_menu_flip"
        android:icon="@drawable/crop_image_menu_flip"
        android:title="@string/crop_image_menu_flip"
        sweet:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/crop_image_menu_flip_horizontally"
                android:title="@string/crop_image_menu_flip_horizontally" />
            <item
                android:id="@+id/crop_image_menu_flip_vertically"
                android:title="@string/crop_image_menu_flip_vertically" />
        </menu>
    </item>
    <item
        android:id="@+id/crop_image_menu_crop"
        android:title="@string/crop_image_menu_crop"
        sweet:showAsAction="always" />
</menu>
