<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:sweet="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        sweet:contentInsetLeft="0dp"
        sweet:contentInsetStart="0dp"
        sweet:contentInsetStartWithNavigation="0dp"
        sweet:titleTextColor="@color/colorBlack">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/toolbarImageViewUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_image"
            sweet:riv_corner_radius="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toolbarTextViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:inputType="textCapCharacters"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/toolbarTextViewUserStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayoutMessageChat"
        android:layout_below="@+id/toolbarToolbar"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMessageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutMessageChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageButton
            android:id="@+id/buttonMessageImage"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_menu_camera"
            android:backgroundTint="@android:color/white" />

        <EditText
            android:id="@+id/editTextMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_toEndOf="@id/buttonMessageImage"
            android:layout_toLeftOf="@+id/buttonMessageSend"
            android:background="@color/colorWhite"
            android:hint="@string/send_message"
            android:maxLines="4"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/buttonMessageSend"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/chat_send"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/white" />
    </RelativeLayout>
</RelativeLayout>
