<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:sweet="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        sweet:cardCornerRadius="6dp"
        sweet:cardElevation="3dp"
        sweet:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/roundedImageViewMatchesItemMatchesImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/swipe_shadow" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageViewMatchesItemMatchesOnline"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_brightness_1_black_24dp"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewMatchesItemMatchesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:maxLines="1"
                    android:shadowColor="@color/colorBlack"
                    android:text="@string/full_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewUsersItemUsersGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/textViewMatchesItemMatchesName"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:shadowColor="@color/colorBlack"
                    android:text="@string/g"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <com.github.curioustechizen.ago.RelativeTimeTextView
                    android:id="@+id/textViewMatchesItemMatchesLastSeen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/textViewMatchesItemMatchesName"
                    android:layout_toRightOf="@+id/textViewUsersItemUsersCity"
                    android:gravity="start"
                    android:maxLines="1"
                    android:shadowColor="@color/colorBlack"
                    android:text="@string/age"
                    android:textColor="@color/colorWhite"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textViewUsersItemUsersCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMatchesItemMatchesName"
                    android:layout_alignParentLeft="true"
                    android:gravity="start"
                    android:maxLines="1"
                    android:shadowColor="@color/colorBlack"
                    android:text="Last Seen :"
                    android:textColor="@color/colorWhite"
                    android:textSize="10sp"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/textViewUsersItemUsersDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewUsersItemUsersCity"
                    android:layout_toLeftOf="@+id/RelativeTimeMatchesItemMatchesDate"
                    android:maxLines="1"
                    android:text="Matched on :"
                    android:textColor="@color/colorWhite"
                    android:textSize="10sp" />


                <TextView
                    android:id="@+id/RelativeTimeMatchesItemMatchesDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewUsersItemUsersCity"
                    android:layout_marginLeft="1dp"
                    android:layout_alignParentEnd="true"
                    android:maxLines="2"
                    android:text="Last Seen"
                    android:textColor="@color/colorWhite"
                    android:textSize="10sp" />

            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
